syntax = "proto3";

option go_package = "github.com/orzogc/acfundanmu/acproto";

package AcFunDanmu;

message UnregisterRequest {}

message UnregisterResponse {}
