syntax = "proto3";

option go_package = "github.com/orzogc/acfundanmu/acproto";

package AcFunDanmu;

import "ZtLiveUserInfo.proto";

message CommonActionSignalUserEnterRoom {
	ZtLiveUserInfo userInfo = 1;
	int64 sendTimeMs = 2;
}
