syntax = "proto3";

option go_package = "github.com/orzogc/acfundanmu/acproto";

package AcFunDanmu;

import "AuthorChatPlayerInfo.proto";

message CommonStateSignalAuthorChatCall {
	string authorChatId = 1;
	AuthorChatPlayerInfo inviterUserInfo = 2;
	int64 callTimestampMs = 3;
}
