syntax = "proto3";

option go_package = "github.com/orzogc/acfundanmu/acproto";

package AcFunDanmu;

import "ChatMediaType.proto";

message CommonStateSignalChatAccept {
	string chatId = 1;
	ChatMediaType mediaType = 2;
	string aryaSignalInfo = 3;
}
