syntax = "proto3";

option go_package = "github.com/orzogc/acfundanmu/acproto";

package AcFunDanmu;

message CommonStateSignalLiveState {
    int32 a = 1;
    int32 b = 2;
    string c = 3;
}
