syntax = "proto3";

option go_package = "github.com/orzogc/acfundanmu/acproto";

package AcFunDanmu;

import "CommonActionSignalComment.proto";

message CommonStateSignalRecentComment {
	repeated CommonActionSignalComment comment = 1;
}
