syntax = "proto3";

option go_package = "github.com/orzogc/acfundanmu/acproto";

package AcFunDanmu;

import "ZtLiveActionSignalItem.proto";

message ZtLiveScActionSignal {
	repeated ZtLiveActionSignalItem item = 1;
}
