syntax = "proto3";

option go_package = "github.com/orzogc/acfundanmu/acproto";

package AcFunDanmu;

import "ZtLiveNotifySignalItem.proto";

message ZtLiveScNotifySignal {
	repeated ZtLiveNotifySignalItem item = 1;
}
