syntax = "proto3";

option go_package = "github.com/orzogc/acfundanmu/acproto";

package AcFunDanmu;

message ZtLiveStateSignalItem {
	string signalType = 1;
	bytes payload = 2;
}
