syntax = "proto3";

option go_package = "github.com/orzogc/acfundanmu/acproto";

package AcFunDanmu;

message ZtLiveUserIdentity {
	ManagerType managerType = 1;

	enum ManagerType {
		UNKNOWN_MANAGER_TYPE = 0;
		NORMAL = 1;
	}
}
