syntax = "proto3";

option go_package = "github.com/orzogc/acfundanmu/acproto";

package AcFunDanmu;

import "ImageCdnNode.proto";
import "ZtLiveUserIdentity.proto";

message ZtLiveUserInfo {
	int64 userId = 1;
	string nickname = 2;
	repeated ImageCdnNode avatar = 3;
	string badge = 4;  // bizCustomInfo
    ZtLiveUserIdentity userIdentity = 5;
}
